# CurvesProject

./: .gitignore  CMakeLists.txt
MainApp/: CMakeLists.txt
MainApp/src/: main.cpp
curveslib/: CMakeLists.txt
curveslib/inc/: Curves.hpp  Structs.hxx
curveslib/src/: Curves.cpp
